--- a/public/review.html
+++ b/public/review.html
@@ -224,7 +224,7 @@
                 }
                 
                 // Replace with actual Google Place ID
-                const placeId = 'PLACE_ID'; // This will be replaced with actual place ID
+                const placeId = 'ChIJHTtrS_4DLz4R-zKlv9grrwk'; // This will be replaced with actual place ID
                 const googleUrl = `https://search.google.com/local/writereview?placeid=${placeId}`;
                 
                 // Open Google Reviews in same tab
